[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/UI/cartoon_wood.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Forest_Top.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Ground.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Load_Menu.gd" type="Script" id=4]

[node name="Load_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decoration_Top" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 0.244
margin_bottom = 0.47998
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decoration_Bottom" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilesList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -704.0
margin_top = -348.0
margin_right = -128.0
margin_bottom = 356.0
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -348.0
margin_right = 704.0
margin_bottom = 356.0
focus_mode = 0
max_text_lines = 3
fixed_column_width = 500
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_activated" from="FilesList" to="." method="_on_FilesList_item_activated"]
[connection signal="item_selected" from="FilesList" to="." method="_on_FilesList_item_selected"]
